<resources>
    <string name="app_name">Daily Readings</string>
    <string name="title_activity_bible">Bible</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiamFrZW1hZGRlbiIsImEiOiJjam8zYzI0c2wwdm9iM3ZwaDQyN2JndGprIn0.CojJfMt7cFy-48RECaaXWw</string>

    <!--THEMES-->
    <string-array name="themes">
        <item>Dark</item>
        <item>Light</item>
    </string-array>
    <string-array name="themes_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!--TRANSLATIONS-->
    <string-array name="translations">
        <item>KJV</item>
        <item>ESV</item>
        <item>NET</item>
    </string-array>
    <string-array name="translation_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Font -->
    <string-array name="font_options">
        <item>Default</item>
        <item>Droid Sans</item>
        <item>Droid Serif</item>
        <item>Libre Baskerville</item>
        <item>Roboto Slab</item>
    </string-array>
    <string-array name="font_values">
        <item />
        <item>DroidSans.ttf</item>
        <item>DroidSerif.ttf</item>
        <item>LibreBaskerville-Regular.ttf</item>
        <item>RobotoSlab-Regular.ttf</item>
    </string-array>

    <!-- Font size -->
    <string-array name="text_size_options">
        <item>@string/text_size_extra_small</item>
        <item>@string/text_size_small</item>
        <item>@string/text_size_medium</item>
        <item>@string/text_size_large</item>
        <item>@string/text_size_extra_large</item>
    </string-array>
    <string-array name="pref_text_size_values">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="pref_text_size">pref_text_size</string>
    <string name="pref_text_size_title">Text size</string>
    <string name="pref_font">pref_font</string>
    <string name="pref_font_title">Font</string>
    <string name="pref_translation">pref_translation</string>
    <string name="pref_translation_title">Translation</string>


    <string name="text_size_extra_small">Extra small</string>
    <string name="text_size_small">Small</string>
    <string name="text_size_medium">Medium</string>
    <string name="text_size_large">Large</string>
    <string name="text_size_extra_large">Extra large</string>


    <string name="readings_widget_name">Daily Readings</string>
    <string name="commandments_widget_name">Commandments Of Christ</string>
    <string name="title_activity_bible_places">Bible Places</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_home">Home</string>
    <string name="title_readings">Readings</string>
    <string name="title_comments">Comments</string>
    <string name="title_map">Map</string>

</resources>
