<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <android.support.v7.preference.PreferenceCategory
        android:title="General">

        <android.support.v7.preference.ListPreference
            android:defaultValue="1"
            android:entries="@array/themes"
            android:entryValues="@array/themes_values"
            android:key="pref_theme"
            android:title="Theme" />

        <!--<com.liftyourheads.dailyreadings.SeekBarPreference-->
            <!--android:title="Theme Colour"-->
            <!--android:key="colour" />-->
        <SeekBarPreference
            android:key="colour"
            android:title="Theme Colour"
            android:max="256"
            android:defaultValue="0" />

        <com.liftyourheads.dailyreadings.FontSizePreference
            android:key="@string/pref_text_size"
            android:title="@string/pref_text_size_title"
            android:defaultValue="0"
            app:entries="@array/text_size_options"
            app:entryValues="@array/pref_text_size_values" />

        <com.liftyourheads.dailyreadings.FontPreference
            android:key="@string/pref_font"
            android:title="@string/pref_font_title"
            android:defaultValue="0"
            app:entries="@array/font_options"
            app:entryValues="@array/font_values" />

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:title="Readings" >

        <android.support.v7.preference.ListPreference
            android:entries="@array/translations"
            android:entryValues="@array/translations"
            android:defaultValue="ESV"
            android:key="@string/pref_translation"
            android:title="@string/pref_translation_title" />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="pref_paragraphs"
            android:title="Enable paragraphs" />

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>